<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <PreferenceCategory

        app:icon="@drawable/ic_info_black_24dp"
        app:title="@string/pref_header_general"
        app:initialExpandedChildrenCount="1"
        >

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="force_same_jira_url"
            app:summary="@string/pref_description_force_same_jira_url"
            app:title="@string/pref_title_force_same_jira_url" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="automatic_field_creation"
            app:summary="@string/pref_description_automatic_field_creation"
            app:title="@string/pref_title_automatic_field_creation" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="automatic_scan_continuation"
            app:summary="@string/pref_description_automatic_scan_continuation"
            app:title="@string/pref_title_automatic_scan_continuation" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_settings_ethernet_black_24px"
        app:title="@string/pref_header_network"
        app:initialExpandedChildrenCount="0"
        >
        <EditTextPreference
            app:defaultValue="3"
            android:selectAllOnFocus="true"
            app:singleLine="true"
            android:inputType="number|none"
            app:title="@string/pref_title_connect_timeout"
            app:key="preference_connect_timeout"
            app:summary="@string/pref_description_connect_timeout" />
        <EditTextPreference
            app:defaultValue="3"
            android:selectAllOnFocus="true"
            app:singleLine="true"
            android:inputType="number"
            app:title="@string/pref_title_read_timeout"
            app:key="preference_read_timeout"
            app:summary="@string/pref_description_read_timeout" />
    </PreferenceCategory>

</PreferenceScreen>
