<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24px"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/outline_help_outline_24"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_outline_black_24px"
                android:title="@string/information" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/outline_bug_report_24"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
